# NMRSpinDynamics

./: .gitignore  AGENTS.md  README.md
NQRDatabase/: README.md
PythonSpinDynamics/: .gitignore  README.md  pyproject.toml
PythonSpinDynamics/benchmarks/: README.md  diffusion_high_q_validation.py  forward_kernel.py
PythonSpinDynamics/benchmarks/results/: batched_eigh_2026-06-28.csv  jax_batched_2026-06-28.csv  jax_gpu_2026-06-28.csv  jax_optimizer_2026-06-28.csv  jax_rawkernel_2026-06-28.csv  jax_sweep_2026-06-28.csv  numba_rawkernel_2026-06-28.csv
PythonSpinDynamics/docs/: development_environment.md  generate_api_reference.py  matlab_mapping.md  migration_plan.md  nqr_module_plan.md  performance_worklist.md  radiation_damping.md  user_manual.tex  validation_results.md
PythonSpinDynamics/docs/python_api/: analysis.md  api_reference.md  concepts.md  esr.md  examples.md  exchange.md  index.md  installation.md  internal_gradients.md  j_coupling.md  known_gaps.md  nqr.md  performance.md  workflows.md
PythonSpinDynamics/examples/: _mandal2015_absolute_phase.py  _source_path.py  large_isochromat_backends.py  matched_diffusion_cpmg.py  nmr_maser.py  nqr_slse_powder_gradient.py  plot_bpp_relaxation_temperature.py  plot_bpp_water_t1t2_temperature.py  plot_chen2020_slse_relaxation.py  plot_cpmg_pipe_flow.py  plot_custom_imaging_fields.py  plot_diffusion_absolute_phase_compare.py  plot_diffusion_sweep.py  plot_earth_field_prepolarized_nmr.py  plot_esr_hyperfine_doublet.py  plot_esr_powder_spectrum.py  plot_esr_pulsed_echo.py  plot_esr_quadrupolar_eseem.py  plot_esr_relaxation.py  plot_esr_single_crystal.py  plot_finite_train_workflows.py  plot_ideal_imaging.py  plot_ideal_workflows.py  plot_internal_gradients.py  plot_inverse_laplace.py  plot_mandal2015_echo_modulation.py  plot_mandal2015_phase_classes.py  plot_mandal2015_phase_step_sweep.py  plot_mandal2015_pulse_shapes.py  plot_motion_diffusion_cpmg.py  plot_motion_linear.py  plot_multislice_halbach_imaging.py  plot_nmr_maser.py  plot_nqr_auto_model_selection.py  plot_nqr_database_prepolarization.py  plot_nqr_full_powder_nutation.py  plot_nqr_population_transfer.py  plot_nqr_powder_nutation.py  plot_nqr_sorc_konnai2008.py  plot_optimization_pipeline.py  (+19 more)
PythonSpinDynamics/scripts/: setup_dev_env.ps1  setup_dev_env_wsl.sh  verify_dev_env.py
PythonSpinDynamics/tests/: README.md  _perf_scenarios.py  example_tests.py  fixture_tests.py  test_absolute_phase.py  test_analysis_ilt.py  test_basic_octave_fixtures.py  test_batched_nqr.py  test_batched_sweep.py  test_diffusion_absolute_phase.py  test_diffusion_physics.py  test_esr.py  test_examples.py  test_exchange.py  test_imaging_3d.py  test_jax_backend.py  test_jax_optimizer.py  test_motion.py  test_motion_sequence.py  test_nqr.py  test_nqr_full_dynamics.py  test_nqr_model_selection.py  test_numba_backend.py  test_perf_golden.py  test_prepolarization.py  test_pulse_diagnostics.py  test_radiation_damping.py  test_relaxation.py  test_slice_selective.py  test_spatial_fields.py  test_susceptibility.py  test_validation_gaps.py
QuadrupolarDFT/: .gitignore  README.md  pyproject.toml
QuadrupolarDFT/docs/: user_manual.tex
QuadrupolarDFT/examples/: finite_displacement_workflow.py  nano2_temperature_efg.py  parse_abinit_efg.py  postprocess_nano2_efg.py
QuadrupolarDFT/results/: nano2_efg_results.md  nano2_efg_summary.csv
QuadrupolarDFT/tests/: test_abinit.py  test_abinit_phonon.py  test_collect_efg.py  test_finite_displacement.py  test_quadrupolar.py  test_relax.py  test_thermal.py  test_vibrational.py
integration/: .gitignore  README.md  pyproject.toml
integration/examples/: database_consistency.py  nano2_dft_vs_measured.py
integration/scripts/: write_consistency_flags.py  write_landolt_review_flags.py
integration/tests/: test_conversions.py  test_cross_validation.py  test_database_validation.py  test_flag_export.py  test_landolt_validation.py  test_pipeline.py
(+150 files in other folders)
