[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-spin-dynamics"
version = "0.0.0"
description = "Python workspace for magnetic-resonance spin-dynamics simulations."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
  { name = "Soumyajit Mandal" }
]
keywords = [
  "nmr",
  "nqr",
  "spin dynamics",
  "cpmg",
  "magnetic resonance",
  "simulation"
]
dependencies = [
  "numpy>=1.24"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4"
]
bench = [
  "pytest-benchmark>=4"
]
opt = [
  "scipy>=1.11"
]
numba = [
  "numba>=0.59"
]
jax = [
  "jax>=0.4.28"
]
perf = [
  "numba>=0.59",
  "jax>=0.4.28"
]
plot = [
  "matplotlib>=3.7",
  "pillow>=9"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]
"tests/test_*.py" = ["E402"]
"tests/octave_fixtures/core.py" = ["F403", "F405"]
"tests/octave_fixtures/optimization.py" = ["F403", "F405"]
"tests/octave_fixtures/support.py" = ["E402", "F401"]
"tests/octave_fixtures/workflows.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]
markers = [
  "smoke: fast representative checks for edit loops",
  "fixtures: MATLAB/Octave fixture parity checks",
  "optional: checks that exercise optional dependencies",
  "slow: longer numerical validation checks"
]
