[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quadrupolar-dft"
version = "0.0.0"
description = "Ab initio EFG and quadrupolar-coupling workflow helpers."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
  { name = "Soumyajit Mandal" }
]
keywords = [
  "nqr",
  "efg",
  "quadrupolar coupling",
  "density functional theory",
  "abinit"
]
dependencies = [
  "numpy>=1.24"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["E402"]
